--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.1",
   "scripts": {
     "start": "node app.js",
-    "build-hello": "browserify ./lib/entrypoints/hello.js -o ./static/bundles/hello.js",
-    "build-server": "browserify -r ./lib/entrypoints/server.js:serverRoot -o ./static/bundles/server.js",
+    "build-hello": "webpack ./lib/entrypoints/hello.js ./static/bundles/hello.js",
+    "build-server": "webpack ./lib/entrypoints/server.js ./static/bundles/server.js --target node --output-library serverRoot --output-library-target commonjs2",
     "build": "npm run build-hello && npm run build-server"
   },
   "dependencies": {
     "express": "3.4.8",
     "react": "0.8.0",
-    "browserify": "~3.24.11",
-    "qs": "~0.6.6"
+    "qs": "~0.6.6",
+    "webpack": "~1.0.0-rc3"
   },
   "license": "Apache 2"
 }
